# ai-deepsearch

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SOLUTION_DESIGN.md  app.py  code_review_report.md  deep-search-plan.md  docker-compose.yml  greeting.txt  main.py  pack.sh  pyproject.toml  requirements.txt  requirements_local.txt  server.py  system_prompt.txt  test_query_expansion.py
app/: __init__.py  apis.py  eternalai_mcp_middleware.py  handlers.py  models.py  utils.py
deepsearch/: __init__.py  constants.py  export.py  magic.py  models.py  models_openai.py  utils.py
deepsearch/agents/: __init__.py  bm25_search.py  brave_search.py  chess_xray_lesion_detector.py  deep_reasoning.py  exa_search.py  fact_checking.py  faiss_indexing.py  google_search.py  information_extraction.py  llama_reasoning.py  pubmed_search.py  query_expansion.py  query_refinement.py  rag.py  tavily_search.py  twitter_search.py  xray_lesion_detector.py
deepsearch/cache/: async_cache.py  sync_cache.py  wrapper.py
deepsearch/schemas/: agents.py  commons.py  openai.py  twitter.py
deepsearch/service/: redis.py  twitter.py
deepsearch/utils/: misc.py  oai_streaming.py  streaming.py
public/: index.html  script.js  styles.css
scripts/: build_and_run.sh  build_docker.sh  run_docker.sh  test.py
