[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eai_deepsearch"
version = "1.0.0"
description = "A deep search system"
authors = [
    { name = "eternalai", email = "dev@eternalai.org" }
]
keywords = ["deep search", "search", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"

dependencies = [
    "eai_http_middleware @ git+https://github.com/daniel-bvm/http-middleware@1.0.0",
    "faiss-cpu==1.12.0",
    "json_repair==0.49.0",
    "langchain==0.3.27",
    "langchain-core==0.3.75",
    "langchain-openai==0.3.32",
    "langchain-text-splitters==0.3.9",
    "numpy==2.3.2",
    "rank-bm25==0.2.2",
    "regex==2025.7.34",
    "requests==2.32.5",
    "tavily-python==0.7.11",
    "aiosqlite==0.21.0",
]

[tool.setuptools.packages.find]
include = ["deepsearch", "deepsearch.*"]
exclude = []
